--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -10,7 +10,8 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
-
+        with:
+          fetch-depth: 0
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
         with:
